@@ -1,0 +1,24 @@
+--- !ditz.rubyforge.org,2008-03-06/issue 
+title: taskwarrior overrides user CFLAGS settings.
+desc: ""
+type: :bugfix
+component: misc-overlay
+release: 
+reporter: James Rowe <jnrowe@gmail.com>
+status: :unstarted
+disposition: 
+creation_time: 2009-12-13 11:35:43.211823 Z
+references: []
+
+id: f86c46636c26fd30d5d812fc207a8ea9107c7bdc
+log_events: 
+- - 2009-12-13 11:35:43.707710 Z
+  - James Rowe <jnrowe@gmail.com>
+  - created
+  - ""
+- - 2009-12-13 11:35:47.059813 Z
+  - James Rowe <jnrowe@gmail.com>
+  - issue claimed
+  - ""
+claimer: James Rowe <jnrowe@gmail.com>
+git_branch: 
