@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*taskwarrior-1.8.5 (13 Dec 2009)
+
+  13 Dec 2009; James Rowe <jnrowe@gmail.com> +taskwarrior-1.8.5.ebuild:
+  Version bump [c44].
+
   23 Nov 2009; James Rowe <jnrowe@gmail.com> taskwarrior-1.8.4.ebuild:
   Install bash/zsh completion and vim support in to usable locations.
 
